syntax = "proto3";

package dev.httpmarco.polocloud.v1.proto;

option java_package = "dev.httpmarco.polocloud.v1.groups";
option java_multiple_files = true;

import "polocloud/v1/proto/object_utils.proto";
import "google/protobuf/struct.proto";

service GroupController {
  rpc find(FindGroupRequest) returns (FindGroupResponse);
}

message FindGroupRequest {
  string name = 1;
}

message FindGroupResponse {
  repeated GroupSnapshot groups = 1;
}


message GroupSnapshot {
  string name = 1;
  GroupType type = 2;
  int32 minimumMemory = 3;
  int32 maximumMemory = 4;
  int32 minimumOnline = 5;
  int32 maximumOnline = 6;
  int32 percentageToStartNewService = 7;
  repeated string templates = 8;
  map<string, string> properties = 9;
}